--- a/config/settings.yml
+++ b/config/settings.yml
@@ -432,30 +432,40 @@ gamepress_plugin:
   community_desktop_leaderboard_a:
     client: true
     default: ""
+    textarea: true
   community_desktop_leaderboard_b:
     client: true
     default: ""
+    textarea: true
   community_desktop_leaderboard_c:
     client: true
     default: ""
+    textarea: true
   community_desktop_leaderboard_d:
     client: true
-    default: false
+    default: ""
+    textarea: true
   community_mobile_300x250_a:
     client: true
-    default: false
+    default: ""
+    textarea: true
   community_mobile_300x250_b:
     client: true
-    default: false
+    default: ""
+    textarea: true
   community_mobile_300x250_c:
     client: true
-    default: false
+    default: ""
+    textarea: true
   community_mobile_300x250_d:
     client: true
-    default: false
+    default: ""
+    textarea: true
   community_mobile_320x50_a:
     client: true
-    default: false
+    default: ""
+    textarea: true
   community_mobile_320x50_b:
     client: true
-    default: false
+    default: ""
+    textarea: true
