--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Gemfile.lock
 .DS_Store
 *.swp
 .rubocop-https---raw-githubusercontent-com-discourse-discourse-master--rubocop-yml
+.idea/workspace.xml
